[tool.poetry]
name = "balakirev"
version = "0.1.0"
description = "balakirev cource stepik"
authors = ["MrLerich <93153582+MrLerich@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
